crates/yt-dlp-bridge/src/snapshots/yt_dlp_bridge__format__format_tests__snapshot_best_audio_m4a.snap
---
source: crates/yt-dlp-bridge/src/format_test.rs
expression: args
---
[
    "-f",
    "bestaudio[ext=m4a]/bestaudio[ext=mp4]/bestaudio",
    "-x",
    "--audio-format",
    "m4a",
]
