crates/yt-dlp-bridge/src/snapshots/yt_dlp_bridge__format__format_tests__snapshot_best_audio_opus.snap
---
source: crates/yt-dlp-bridge/src/format_test.rs
expression: args
---
[
    "-x",
    "--audio-format",
    "opus",
]
