crates/yt-dlp-bridge/src/snapshots/yt_dlp_bridge__format__format_tests__snapshot_best_heuristic.snap
---
source: crates/yt-dlp-bridge/src/format_test.rs
expression: args
---
[
    "-f",
    "bestvideo+bestaudio/best",
]
